--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,8 +13,8 @@
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 
-
-spring.datasource.url=jdbc:postgresql://192.168.147.132:5432/postgres
+#spring.datasource.url=jdbc:postgresql://192.168.147.132:5432/postgres
+spring.datasource.url=jdbc:postgresql://${DBHOST:10.125.128.28}:${DBPORT:43208}/${DBINST:postgres}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
