--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,17 @@
             <scope>runtime</scope>
         </dependency>
         <!--ORACLE JDBC驱动-->
+        <!--<dependency>-->
+            <!--<groupId>com.oracle</groupId>-->
+            <!--<artifactId>ojdbc6</artifactId>-->
+            <!--<version>11.2.0.2.0</version>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc6 -->
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.2.0</version>
+            <version>12.1.0.1-atlassian-hosted</version>
+            <scope>test</scope>
         </dependency>
         <!-- postgresql jdbc -->
         <dependency>
