--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-#server.port=19001
+server.port=${APPPORT:19001}
 
 #spring.datasource.url=jdbc\:oracle\:thin\:@133.224.217.175\:1521\:gis175
 #spring.datasource.username=gis_hlj
@@ -14,7 +14,7 @@
 
 
 #spring.datasource.url=jdbc:postgresql://192.168.147.132:5432/postgres
-spring.datasource.url=jdbc:postgresql://${DBHOST:10.125.128.28}:${DBPORT:43208}/${DBINST:postgres}
+spring.datasource.url=jdbc:postgresql://${DBHOST:133.224.217.121}:${DBPORT:5432}/${DBINST:gishlj}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
