--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,6 @@ sonar.projectName=api-bussiness
 sonar.projectVersion=1.0
 sonar.sources=src
 //sonar.binaries=bin\classes
+sonar.java.binaries=target/classes
 sonar.language=java
 sonar.sourceEncoding=UTF-8
