--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,6 @@ sonar.projectKey=api-bussiness
 sonar.projectName=api-bussiness
 sonar.projectVersion=1.0
 sonar.sources=src
-//sonar.binaries=bin\classes
 sonar.java.binaries=target/classes
-sonar.language=java
+sonar.language=Java, XML
 sonar.sourceEncoding=UTF-8
