--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectName=api-bussiness
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.java.binaries=target/classes
-sonar.language=Java, XML
+sonar.language=java
 sonar.sourceEncoding=UTF-8
