--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,11 @@
             <scope>test</scope>
         </dependency>
         <!-- postgresql jdbc -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4.1212</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.postgresql</groupId>-->
+            <!--<artifactId>postgresql</artifactId>-->
+            <!--<version>9.4.1212</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -184,9 +184,30 @@
                             <goal>build</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>tag-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>tag</goal>
+                        </goals>
+                        <configuration>
+                            <image>gisappapi:latest</image>
+                            <newName>192.168.147.135:5000/dongjb/gisappapi:${project.version}</newName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>push-image</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>push</goal>
+                        </goals>
+                        <configuration>
+                            <imageName>192.168.147.135:5000/dongjb/gisappapi:${project.version}</imageName>
+                        </configuration>
+                    </execution>
                 </executions>
                 <configuration>
-                    <imageName>example</imageName>
+                    <imageName>gisappapi</imageName>
                     <dockerDirectory>docker</dockerDirectory>
                     <resources>
                         <resource>
