--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
                     </execution>
                     <execution>
                         <id>push-image</id>
-                        <phase>deploy</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>push</goal>
                         </goals>
